notebooks: working examples of exporting PLR-native objects to a workspace

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -969,14 +969,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
     "# Example using exported data.\n",
-    "from pylabrobot.resources.pipettin.utils import load_objects\n",
+    "from piper.datatools.datautils import load_objects\n",
     "\n",
     "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
     "\n",
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,24 +1613,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from newt.translators.plr import deck_to_workspaces\n",
+    "from newt.translators.plr import deck_to_db\n",
     "\n",
     "# Serialize deck.\n",
     "deck_data = deck.serialize()\n",
     "# Convert to workspace.\n",
-    "new_workspaces = deck_to_workspaces(deck_data)\n",
+    "new_workspaces = deck_to_db(deck_data)[\"workspaces\"]\n",
     "\n",
-    "import json\n",
-    "data = json.dumps(deck_data, indent = 4)\n",
-    "with open(\"deck.json\", 'w', encoding='utf-8') as f:\n",
-    "    f.write(data)\n",
-    "data = json.dumps(new_workspaces, indent = 4)\n",
-    "with open(\"workspace.json\", 'w', encoding='utf-8') as f:\n",
-    "    f.write(data)\n"
+    "from pylabrobot.resources.pipettin.utils import json_dump\n",
+    "\n",
+    "# Inspect the outputs.\n",
+    "json_dump(deck_data, \"deck.json\")\n",
+    "json_dump(new_workspaces, \"workspace.json\")"
    ]
   },
   {
@@ -1692,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,8 +1702,9 @@
     "# Convert to workspace.\n",
     "result = deck_to_db(deck_data)\n",
     "\n",
+    "# Compare\n",
     "json_dump(deck_data, \"deck.json\")\n",
-    "json_dump(result, \"db.json\")\n"
+    "json_dump(result, \"db.json\")"
    ]
   },
   {
@@ -1749,44 +1748,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pylabrobot.resources.pipettin import make_silver\n",
     "\n",
     "# Handy generator function.\n",
-    "deck = make_silver(empty=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "deck = make_silver(empty=True)\n",
+    "\n",
     "# Import the resource class\n",
     "from pylabrobot.resources import pipettin_test_plate, Coordinate\n",
     "from pylabrobot.resources.opentrons import opentrons_96_tiprack_300ul\n",
     "\n",
     "# New instance of a test \"Plate\".\n",
     "well_plate = pipettin_test_plate(name='plate_01')\n",
+    "# Add liquids to wells.\n",
     "well_plate.set_well_liquids(liquids=(None, 123))\n",
-    "well_plate.print_grid()\n",
+    "# well_plate.print_grid()\n",
     "\n",
     "# OpenTrons well-plate.\n",
-    "ot_well_plate = opentrons_96_tiprack_300ul(\"plate_02\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ot_tip_rack = opentrons_96_tiprack_300ul(\"plate_02\")\n",
+    "# ot_tip_rack[\"A1\"]\n",
+    "ot_tip_rack.print_grid()\n",
+    "\n",
     "# Assign the resources.\n",
     "deck.assign_child_resource(well_plate, location = Coordinate(100, 100))\n",
-    "deck.assign_child_resource(ot_well_plate, location = Coordinate(100, 250))"
+    "deck.assign_child_resource(ot_tip_rack, location = Coordinate(100, 250))"
    ]
   },
   {
@@ -1802,9 +1790,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pprint import pprint\n",
+    "from pylabrobot.resources.pipettin.utils import json_dump\n",
+    "\n",
     "from newt.translators.plr import deck_to_db\n",
     "from newt.utils import draw_ascii_workspace\n",
-    "from pprint import pprint\n",
     "\n",
     "d = deck.serialize()\n",
     "\n",
@@ -1812,7 +1802,12 @@
     "w = db[\"workspaces\"][0]\n",
     "p = db[\"platforms\"]\n",
     "\n",
-    "print(draw_ascii_workspace(w, p))"
+    "print(draw_ascii_workspace(w, p))\n",
+    "\n",
+    "json_dump(d, \"deck.json\")\n",
+    "json_dump(db[\"workspaces\"], \"workspace.json\")\n",
+    "\n",
+    "len(w[\"items\"][1][\"content\"])"
    ]
   },
   {
@@ -1854,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
