notebooks: minor fix

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1849,15 +1849,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Example using exported data.\n",
     "from pylabrobot.resources import SilverDeck\n",
-    "from pprint import pprint\n",
-    "from copy import deepcopy\n",
     "from newt.translators.plr import deck_to_workspaces, convert_custom\n",
+    "from pylabrobot.resources.pipettin.utils import json_dump\n",
     "\n",
     "# Choose the database and a workspace.\n",
     "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
@@ -1870,7 +1869,9 @@
     "pocket = deck.get_resource(item_name)\n",
     "pocket_serialized = pocket.serialize()\n",
     "\n",
-    "data_converted = convert_custom(pocket_serialized, deck.get_size_y())"
+    "data_converted = convert_custom(pocket_serialized, deck.get_size_y())\n",
+    "\n",
+    "json_dump(data_converted, \"pocket.json\")"
    ]
   },
   {
