notebooks: add to-do to backend notebook

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -1890,10 +1890,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# To-do\n",
+    "\n",
+    "- [ ] Fix: Tip-drops won't work with a tool that uses a fixed ejector.\n",
+    "- [ ] Check: ¿does select by \"index\" actually work in piper? I can't recall coding it.\n",
+    "  - [ ] Fix: If a resource is not grid-like, the actions will be malformed. Make all commands work by index instead will work in \"custom\" platforms too.\n",
+    "  - [ ] Fix: any resources not in the usual nesting pattern will cause problems. Raise errors if this is the case. Figure out how to detect that first."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
