--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1546,6 +1546,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import a Workspace"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1606,9 +1613,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Approach 1: Serialize the Deck\n",
+    "## Approach 1: Translate the Serialized the Deck\n",
     "\n",
-    "Should be good enough to get ChatGPT to make boilerplate code."
+    "Convert the serialized deck to a workspace's JSON."
    ]
   },
   {
@@ -1635,7 +1642,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What about PLR well-plates"
+    "### Translating Tip containers\n",
+    "\n",
+    "The interaction between Tips and Tip Racks is not fully parametrized in PLR.\n",
+    "\n",
+    "PLR parametrizes this relationship with one value: the Z-coordinate of the tip when sitting on its spot.\n",
+    "\n",
+    "There is no information in PLR about the contact surface between the tip and the spot. Which means that I'm missing the \"active height\" of the tip rack. This is the height of the top-contact surface of the tip rack, on which the tips sit.\n",
+    "\n",
+    "The tip's height (relative to the rack) is calculated as an offset from that surface (and maps to the length of the tip inserted into the rack).\n",
+    "\n",
+    "If I defaulted the rack's \"active height\" value to 0, then the container's Z-offset would map directly to the tip's Z-coordinate (which PLR has).\n",
+    "\n",
+    "This seems like a nice solution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Custom platforms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try importing and exporting the Pocket PCR custom platform.\n",
+    "\n",
+    "Because PLR objects don't really want to preserve information about their \"regular\" platforms (i.e grid-like platforms like well-plates and tip-racks), the \"custom\" platform type seems useful.\n",
+    "\n",
+    "Any \"platform-like\" resource that is not contemplated, may be translated to a custom platform."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example using exported data.\n",
+    "from pylabrobot.resources import SilverDeck\n",
+    "from newt.translators.plr import deck_to_workspaces, convert_custom\n",
+    "from pylabrobot.resources.pipettin.utils import json_dump\n",
+    "\n",
+    "# Choose the database and a workspace.\n",
+    "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
+    "workspace_name = \"Basic Workspace\"\n",
+    "item_name = \"Pocket PCR\"\n",
+    "\n",
+    "# Instantiate the deck object.\n",
+    "deck = SilverDeck(db=db_location, workspace_name=workspace_name)\n",
+    "\n",
+    "pocket = deck.get_resource(item_name)\n",
+    "pocket_serialized = pocket.serialize()\n",
+    "\n",
+    "data_converted = convert_custom(pocket_serialized, deck.get_size_y())\n",
+    "\n",
+    "json_dump(data_converted, \"pocket.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What about PLR objects"
    ]
   },
   {
@@ -1670,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1690,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1734,9 +1805,7 @@
     "from newt.translators.plr import convert_item\n",
     "\n",
     "# Convert the plate.\n",
-    "piper_item, piper_platform, item_containers = convert_item(ot_well_plate.serialize(), 300)\n",
-    "\n",
-    "piper_platform"
+    "piper_item, piper_platform, item_containers = convert_item(ot_well_plate.serialize(), 300)"
    ]
   },
   {
@@ -1814,76 +1883,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Translating Tip containers\n",
+    "### Using the OpenTrons Deck\n",
     "\n",
-    "The interaction between Tips and Tip Racks is not fully parametrized in PLR.\n",
+    "This turned out to be a mess. The OT2 deck does not have an agnostic front-end.\n",
     "\n",
-    "PLR parametrizes this relationship with one value: the Z-coordinate of the tip when sitting on its spot.\n",
-    "\n",
-    "There is no information in PLR about the contact surface between the tip and the spot. Which means that I'm missing the \"active height\" of the tip rack. This is the height of the top-contact surface of the tip rack, on which the tips sit.\n",
-    "\n",
-    "The tip's height (relative to the rack) is calculated as an offset from that surface (and maps to the length of the tip inserted into the rack).\n",
-    "\n",
-    "If I defaulted the rack's \"active height\" value to 0, then the container's Z-offset would map directly to the tip's Z-coordinate (which PLR has).\n",
-    "\n",
-    "This seems like a nice solution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Custom platforms"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Try importing and exporting the Pocket PCR custom platform.\n",
-    "\n",
-    "Because PLR objects don't really want to preserve information about their \"regular\" platforms (i.e grid-like platforms like well-plates and tip-racks), the \"custom\" platform type seems useful.\n",
-    "\n",
-    "Any \"platform-like\" resource that is not contemplated, may be translated to a custom platform."
+    "Translating it to a workspace is a job for another day..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Example using exported data.\n",
-    "from pylabrobot.resources import SilverDeck\n",
-    "from newt.translators.plr import deck_to_workspaces, convert_custom\n",
-    "from pylabrobot.resources.pipettin.utils import json_dump\n",
-    "\n",
-    "# Choose the database and a workspace.\n",
-    "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
-    "workspace_name = \"Basic Workspace\"\n",
-    "item_name = \"Pocket PCR\"\n",
-    "\n",
-    "# Instantiate the deck object.\n",
-    "deck = SilverDeck(db=db_location, workspace_name=workspace_name)\n",
-    "\n",
-    "pocket = deck.get_resource(item_name)\n",
-    "pocket_serialized = pocket.serialize()\n",
-    "\n",
-    "data_converted = convert_custom(pocket_serialized, deck.get_size_y())\n",
-    "\n",
-    "json_dump(data_converted, \"pocket.json\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using the OpenTrons Deck"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1899,9 +1908,11 @@
    "source": [
     "## Approach 2: Use PLR directly\n",
     "\n",
-    "In this approach, I would load PLR, define a deck, and use the PLR objects directly to construct objects for pipettin, all within python.\n",
+    "In this approach, I would have loaded PLR, defined a deck, and used the PLR objects directly to construct objects for pipettin, all within python (no JSON in between).\n",
     "\n",
     "I don't like this option; I prefer to operate on hard data directly, even if it means building bridges between the programs and - for example - JSON as a middle man.\n",
+    "\n",
+    "Besides the JSON part of PLR is already written; it would have been the same amount of work.\n",
     "\n",
     "There is something I don't like about having data in a programming language."
    ]
@@ -1915,24 +1926,14 @@
     "In summary, I should:\n",
     "\n",
     "- [x] Have the SilverDeck set the PLR TipSpot Z coordinate from PW data..\n",
-    "- [ ] Figure out coordinates for tubes and well plates.\n",
-    "- [ ] Have SilverDeck translate new child resources into PW objects. And maybe save them to the DB.\n",
-    "- [ ] Have the backend translate (during setup) non-PW decks to PW format, and save them to the database. This is essential when the deck is not PW-ish.\n",
-    "- [ ] Have the database import container definitions in the \"containerData\" fields of PLR-exported platforms or items.\n",
-    "- [ ] Review the output of `convert_custom`. I have not checked it at all.\n",
-    "\n",
-    "Well and TubeRack locations:\n",
-    "\n",
-    "- Figure out coordinates for tubes and well plates.\n",
-    "\n",
-    "PLR-PW new child translator - Part 1: Deck\n",
-    "\n",
-    "- Have SilverDeck translate new child resources into PW objects. And maybe save them to the DB.\n",
-    "\n",
-    "PLR-PW new child translator - Part 2: Back\n",
-    "\n",
-    "- Have the backend translate (during setup) non-PW decks to PW format, and save them to the database.\n",
-    "  - This is essential when the deck is not PW-ish."
+    "- [x] Figure out coordinates for tubes and well plates.\n",
+    "- [ ] Have SilverDeck translate new child resources into PW objects.\n",
+    "  - [ ] Save them to the DB.\n",
+    "- [ ] Have the backend translate (during setup) non-PW decks to PW format.\n",
+    "  - [ ] Save them to the database.\n",
+    "  - [ ] This is essential when the deck is not PW-ish, unless raw coordinates are used in actions.\n",
+    "- [x] Have the database import container definitions in the \"containerData\" fields of PLR-exported platforms or items.\n",
+    "- [x] Review the output of `convert_custom`. I have not checked it at all.\n"
    ]
   },
   {
