notebooks: add sections on coordinate checks and other minor changes

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!echo $VIRTUAL_ENV\n",
+    "# !echo $VIRTUAL_ENV\n",
     "\n",
     "import os, sys\n",
     "print(\"Current working directory: \" + os.getcwd())\n",
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Note that adding \"fw\" will install some required dependencies. A plain \".\" will not.\n",
-    "%pip install .[fw]"
+    "# %pip install .[fw]"
    ]
   },
   {
@@ -64,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "# %load_ext autoreload\n",
+    "# %autoreload 2"
    ]
   },
   {
@@ -109,8 +109,8 @@
     "from pylabrobot.resources import Coordinate, Deck, Trash\n",
     "\n",
     "\n",
-    "class SilverDeck(Deck):\n",
-    "  \"\"\" (Ag)nostic deck object.\n",
+    "class NewDeck(Deck):\n",
+    "  \"\"\" A new deck object.\n",
     "\n",
     "  Boilerplate code written by Rick: https://forums.pylabrobot.org/t/writing-a-new-backend-agnosticity/844/16\n",
     "  \"\"\"\n",
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deck = SilverDeck(name=\"basic deck 1\")"
+    "deck = NewDeck(name=\"basic deck 1\")"
    ]
   },
   {
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "metadata": {}
    },
@@ -978,31 +978,7 @@
     "# Example using exported data.\n",
     "from piper.datatools.datautils import load_objects\n",
     "\n",
-    "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
-    "\n",
-    "db = load_objects(db_location)[\"pipettin\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get the required objects:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Choose one workspace.\n",
-    "workspace = db[\"workspaces\"][2]\n",
-    "\n",
-    "# Get all platforms and containers.\n",
-    "platforms = db[\"platforms\"]\n",
-    "containers = db[\"containers\"]\n",
-    "tools = db[\"tools\"]"
+    "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'"
    ]
   },
   {
@@ -1023,10 +999,26 @@
     "from pylabrobot.resources import SilverDeck\n",
     "\n",
     "# Instantiate the deck object.\n",
-    "deck = SilverDeck(workspace, platforms, containers, tools)\n",
+    "deck = SilverDeck(db=db_location, workspace_name='MK3 Baseplate')\n",
     "\n",
     "# Inspect the workspace's contents.\n",
-    "print(deck.summary())"
+    "deck.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A simple override allows selecting resources by name using the \"indexer\" operator: `deck[ <resource name> ]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deck[\"Blue tip rack\"]"
    ]
   },
   {
@@ -1131,10 +1123,10 @@
    },
    "outputs": [],
    "source": [
-    "tiprack = deck.get_resource(\"200ul_tip_rack_MULTITOOL 1\")\n",
+    "tiprack = deck.get_resource(\"Blue tip rack\")\n",
     "\n",
     "# Check if all tip spots have tips.\n",
-    "print(all([spot.tracker.has_tip for spot in tiprack.children]))\n",
+    "# print(all([spot.tracker.has_tip for spot in tiprack.children]))\n",
     "\n",
     "# Print a grid representation.\n",
     "tiprack.print_grid()"
@@ -1215,25 +1207,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "metadata": {}
    },
    "outputs": [],
    "source": [
-    "tiprack_item = next(i for i in workspace[\"items\"] if i[\"name\"] == tiprack.name)\n",
+    "# Get the container ID of the tip.\n",
+    "tip_container_id = tip.model\n",
     "\n",
-    "tipA1_content = next(t for t in tiprack_item[\"content\"] if t[\"index\"] == 1)\n",
-    "\n",
-    "tip1A_container = next(c for c in containers if c[\"name\"] == tipA1_content[\"container\"])\n",
-    "\n",
-    "tiprack_platform = next(p for p in platforms if p[\"name\"] == tiprack_item[\"platform\"])\n",
-    "\n",
-    "container_offset_z = next(l[\"containerOffsetZ\"]\n",
-    "                          for l in tiprack_platform[\"containers\"]\n",
+    "tip1A_container = next(c for c in deck.containers if c[\"name\"] == tip_container_id)\n",
+    "tiprack_platform = next(p for p in deck.platforms if p[\"name\"] == tiprack_item[\"platform\"])\n",
+    "container_offset_z = next(l[\"containerOffsetZ\"] for l in tiprack_platform[\"containers\"]\n",
     "                          if l[\"container\"] == tip1A_container[\"name\"])\n",
-    "\n",
-    "tiprack_platform[\"activeHeight\"], container_offset_z"
+    "# tiprack_platform[\"activeHeight\"], container_offset_z, tip1A_container[\"length\"]"
    ]
   },
   {
@@ -1253,7 +1240,7 @@
    "source": [
     "tip_spot_Z = tiprack_platform[\"activeHeight\"] - container_offset_z\n",
     "\n",
-    "tip_spot_Z"
+    "tip_spot.location.z, tip_spot_Z"
    ]
   },
   {
@@ -1271,7 +1258,18 @@
    },
    "outputs": [],
    "source": [
-    "tip_spot.location.z == tip_spot_Z"
+    "from math import isclose\n",
+    "\n",
+    "isclose(tip_spot.location.z, tip_spot_Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deck[\"Blue tip rack\"]"
    ]
   },
   {
@@ -1279,6 +1277,226 @@
    "metadata": {},
    "source": [
     "Si fue \"True\" está todo bien ;)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TubeRack coordinates\n",
+    "\n",
+    "Lets repeat the above for tube racks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources import set_tip_tracking, set_volume_tracking, SilverDeck\n",
+    "from pylabrobot.resources.pipettin import pipettin_db_url\n",
+    "\n",
+    "# We enable tip and volume tracking globally using the `set_volume_tracking` and `set_tip_tracking` methods.\n",
+    "set_volume_tracking(enabled=True)\n",
+    "set_tip_tracking(enabled=True)\n",
+    "\n",
+    "# Get objects.\n",
+    "deck = SilverDeck(db=pipettin_db_url, workspace_name=\"MK3 Baseplate\")\n",
+    "rack = deck[\"Tube Rack [5x16]\"]\n",
+    "spots = rack.get_all_items()\n",
+    "spot = next(spot for spot in spots if spot.has_tube())\n",
+    "tube = spot.get_tube()\n",
+    "\n",
+    "# Get the container info of the tube.\n",
+    "container = next(c for c in deck.containers if c[\"name\"] == tube.model)\n",
+    "rack_platform = next(p for p in deck.platforms if p[\"name\"] == rack.name)\n",
+    "container_link = next(l for l in rack_platform[\"containers\"]\n",
+    "                      if l[\"container\"] == container[\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's perform a check:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from newt.translators.utils import calculate_plr_dz_tube\n",
+    "from math import isclose\n",
+    "\n",
+    "spot_Z = calculate_plr_dz_tube(rack_platform, container_link, container)\n",
+    "\n",
+    "assert isclose(spot.location.z, spot_Z), f\"spot_Z check failed for {rack.name} in {deck.name}\"\n",
+    "spot.location.z, spot_Z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets see what a backend receives, and repeat the check:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.liquid_handling.backends.chatterbox import LiquidHandlerChatterboxBackend\n",
+    "from pylabrobot.liquid_handling.backends.piper_backend import EchoBackend\n",
+    "from pylabrobot.liquid_handling import LiquidHandler\n",
+    "\n",
+    "# backend = LiquidHandlerChatterboxBackend(num_channels=1)\n",
+    "backend = EchoBackend(num_channels=1)\n",
+    "EchoBackend\n",
+    "lh = LiquidHandler(backend=backend, deck=deck)\n",
+    "await lh.setup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiprack = deck.get_resource(\"Blue tip rack\")\n",
+    "pickups = await lh.pick_up_tips(tiprack[\"A1\"], use_channels=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aspirations = await lh.aspirate(rack[\"A1\"], vols=[100], use_channels=[0])\n",
+    "command = backend.commands[-1]\n",
+    "aspiration = command[\"ops\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tube = aspiration.resource\n",
+    "\n",
+    "tube.location, tube.parent.location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item = next(p for p in deck.workspace[\"items\"] if p[\"name\"] == rack.name)\n",
+    "platform = next(p for p in deck.platforms if p[\"name\"] == item[\"platform\"])\n",
+    "content = next(c for c in item[\"content\"] if c[\"name\"] == tube.name)\n",
+    "container = next(c for c in deck.containers if c[\"name\"] == content[\"container\"])\n",
+    "link = next(l for l in platform[\"containers\"] if l[\"container\"] == container[\"name\"])\n",
+    "\n",
+    "platform[\"activeHeight\"], container[\"activeHeight\"], link[\"containerOffsetZ\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spot_Z = calculate_plr_dz_tube(rack_platform, container_link, container)\n",
+    "\n",
+    "assert isclose(tube.parent.location.z, spot_Z), f\"spot_Z check failed for {rack.name} in {deck.name}\"\n",
+    "tube.parent.location.z, spot_Z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom coordinates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's repeat this with a custom platform."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example using exported data.\n",
+    "from pylabrobot.resources import SilverDeck\n",
+    "\n",
+    "# Choose the database and a workspace.\n",
+    "db_location = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/databases.json'\n",
+    "workspace_name = \"Basic Workspace\"\n",
+    "item_name = \"Pocket PCR\"\n",
+    "\n",
+    "# Instantiate the deck object.\n",
+    "deck = SilverDeck(db=db_location, workspace_name=workspace_name)\n",
+    "\n",
+    "pocket = deck.get_resource(item_name)\n",
+    "tube_spot = next(t for t in pocket.children if len(t.children) > 0)\n",
+    "tube = tube_spot.children[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get data from the original objects:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item = next(p for p in deck.workspace[\"items\"] if p[\"name\"] == pocket.name)\n",
+    "platform = next(p for p in deck.platforms if p[\"name\"] == item[\"platform\"])\n",
+    "content = next(c for c in item[\"content\"] if c[\"name\"] == tube.name)\n",
+    "container = next(c for c in deck.containers if c[\"name\"] == content[\"container\"])\n",
+    "slot = platform[\"slots\"][content[\"index\"] - 1]\n",
+    "link = next(l for l in slot[\"containers\"] if l[\"container\"] == container[\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check that the calculations match."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from newt.translators.utils import calculate_plr_dz_slot\n",
+    "from math import isclose\n",
+    "\n",
+    "spot_z = calculate_plr_dz_slot(platform, slot, link, container)\n",
+    "\n",
+    "assert isclose(tube.parent.location.z, spot_z), f\"spot_Z check failed for {rack.name} in {deck.name}\"\n",
+    "tube.parent.location.z, spot_z"
    ]
   },
   {
@@ -1296,9 +1514,6 @@
    },
    "outputs": [],
    "source": [
-    "# Dummy backend.\n",
-    "# from pylabrobot.liquid_handling.backends.chatterbox_backend import ChatterBoxBackend\n",
-    "# back = ChatterBoxBackend()\n",
     "\n",
     "# Piper backend.\n",
     "from pylabrobot.liquid_handling.backends.piper_backend import PiperBackend\n",
@@ -1389,7 +1604,7 @@
    "source": [
     "# plate = lh.get_resource(\"Standard 96-well plate 1\")\n",
     "\n",
-    "tube_rack = lh.get_resource(\"5x16_1.5_rack 1\")\n",
+    "tube_rack = lh.get_resource(\"Tube Rack [5x16]\t\")\n",
     "tube_rack.print_grid()\n",
     "tube_rack[\"A1\"]\n",
     "\n",
@@ -1500,40 +1715,6 @@
     "# plate = lh.get_resource(\"plate_01\")\n",
     "# await lh.aspirate(plate[\"A1:C1\"], vols=[100.0, 50.0, 200.0])\n",
     "# await lh.dispense(plate[\"D1:F1\"], vols=[100.0, 50.0, 200.0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Check Pickup coordinates"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The \"pickup\" object is what a backend gets as argument to figure out the tip's coordinates.\n",
-    "\n",
-    "Turns out it only contains the tip spot and an offset (and the tip, which can be accessed through the tip spot too)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
-    "from pylabrobot.liquid_handling.standard import Pickup\n",
-    "from pylabrobot.resources.coordinate import Coordinate\n",
-    "\n",
-    "tip_spot = tiprack.get_item(\"F1\")\n",
-    "\n",
-    "pickup = Pickup(resource=tip_spot, offset=Coordinate(0,0,0,), tip=tip_spot.get_tip())\n",
-    "\n",
-    "vars(pickup)"
    ]
   },
   {
