--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1721,7 +1721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deck translation to PLR\n",
+    "# Deck to Workspace translation\n",
     "\n",
     "Development notes for translating PLR deck objects to Pipettin workspace objects."
    ]
@@ -1887,7 +1887,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What about PLR objects"
+    "## What about PLR-native objects\n",
+    "\n",
+    "PLR objects don't populate the additional properties I added to its objects.\n",
+    "\n",
+    "Critically, PLR does not define the \"active height\" of platforms: the height where the mechanical interface between tips and tip racks is.\n",
+    "\n",
+    "I'm also not sure about other stuff: which height is used by other backends? the tube's or the spot 's? Is the wall thickness of the tube taken into account?\n",
+    "\n",
+    "So... _Will they blend?_"
    ]
   },
   {
@@ -1917,7 +1925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add the plate to a deck:"
+    "Add the plate to regular `Deck`:"
    ]
   },
   {
@@ -1937,7 +1945,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convert:"
+    "Convert the deck, and inspect the results:"
    ]
   },
   {
@@ -1965,7 +1973,7 @@
    "source": [
     "### OpenTrons objects\n",
     "\n",
-    "Lets start with a plate."
+    "I would like to use OpenTron's labware with my robot, using parameters from their library."
    ]
   },
   {
@@ -2002,20 +2010,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import the resource classes.\n",
+    "from pylabrobot.resources.opentrons import opentrons_96_tiprack_300ul\n",
+    "from pylabrobot.resources import pipettin_test_plate, Coordinate\n",
+    "# Handy function to instantiate a SilverDeck.\n",
     "from pylabrobot.resources.pipettin import make_silver\n",
     "\n",
-    "# Handy generator function.\n",
+    "# Instantiate and empty SilverDeck.\n",
     "deck = make_silver(empty=True)\n",
-    "\n",
-    "# Import the resource class\n",
-    "from pylabrobot.resources import pipettin_test_plate, Coordinate\n",
-    "from pylabrobot.resources.opentrons import opentrons_96_tiprack_300ul\n",
     "\n",
     "# New instance of a test \"Plate\".\n",
     "well_plate = pipettin_test_plate(name='plate_01')\n",
     "# Add liquids to wells.\n",
     "well_plate.set_well_liquids(liquids=(None, 123))\n",
-    "# well_plate.print_grid()\n",
+    "well_plate.print_grid()\n",
     "\n",
     "# OpenTrons well-plate.\n",
     "ot_tip_rack = opentrons_96_tiprack_300ul(\"plate_02\")\n",
