notebooks: add state translation section

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1887,6 +1887,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## State translation\n",
+    "\n",
+    "PLR does not include container volumes in the regular serialization. It does include in the \"state serialization\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the resource classes.\n",
+    "from pylabrobot.resources.opentrons import opentrons_96_tiprack_300ul\n",
+    "from pylabrobot.resources import pipettin_test_plate, Coordinate\n",
+    "# Handy function to instantiate a SilverDeck.\n",
+    "from pylabrobot.resources.pipettin import make_silver\n",
+    "from pylabrobot.resources.pipettin.utils import json_dump\n",
+    "\n",
+    "# Instantiate and empty SilverDeck.\n",
+    "deck = make_silver()\n",
+    "json_dump(deck.serialize(), \"deck.json\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# deck.serialize_all_state()\n",
+    "deck.save_state_to_file(\"fullstate.json\", indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, on inspection of that file, we realize that it does not match the format of PLR's regular serialize. If any resources share name, they will overwrite each other.\n",
+    "\n",
+    "So... I added a \"serialize_state\" call to the regular \"serialize\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## What about PLR-native objects\n",
     "\n",
     "PLR objects don't populate the additional properties I added to its objects.\n",
