notebooks: pipettin first commands

--- a/notebooks/pipettin-bot.ipynb
+++ b/notebooks/pipettin-bot.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -34,6 +41,44 @@
     "lh = LiquidHandler(backend=back, deck=deck)\n",
     "\n",
     "await lh.setup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Send commands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tip_rack = deck.get_resource(\"Blue tip rack 1\")\n",
+    "\n",
+    "pickups = await lh.pick_up_tips(tip_rack[\"A1\"], use_channels=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tube_rack = deck[\"Tube Rack [5x16] 1\"]\n",
+    "\n",
+    "aspirations = await lh.aspirate(tube_rack[\"A1\"], vols=[100], use_channels=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Chequear que piper esté usando el tip que le pasé."
    ]
   },
   {
