piper_backend: update PiperBackend calls with new arguments

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -1109,18 +1109,12 @@
    },
    "outputs": [],
    "source": [
-    "# Set \"mongo_url = None\" to skip the database connection.\n",
-    "# backend = PiperBackend(verbose=False,\n",
-    "#                        mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
-    "#                        sio_address = \"http://192.168.11.39:3333\", # Pipettin GUI node server.\n",
-    "#                        ws_address = \"ws://192.168.11.39:7125/websocket\", # Moonraker server.\n",
-    "# )\n",
-    "\n",
-    "backend = PiperBackend(verbose=False, dry=True, clearance=80.0,\n",
-    "                       mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
-    "                       sio_address = \"http://localhost:3333\", # Pipettin GUI node server.\n",
-    "                       ws_address = \"ws://localhost:7125/websocket\", # Moonraker server.\n",
-    ")"
+    "backend = PiperBackend(config={\n",
+    "  \"sio_address\": \"http://localhost:3333\", # Pipettin GUI node server.\n",
+    "  \"ws_address\": \"ws://localhost:7125/websocket\", # Moonraker server.\n",
+    "  \"verbose\": False,\n",
+    "  \"dry\": True,\n",
+    "})"
    ]
   },
   {
@@ -1611,13 +1605,12 @@
     "# - deck\n",
     "from pylabrobot.resources.hamilton import STARLetDeck\n",
     "\n",
-    "backend = PiperBackend(verbose=False,\n",
-    "                       mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
-    "                       sio_address = \"http://localhost:3333\", # Pipettin GUI node server.\n",
-    "                       ws_address = \"ws://localhost:7125/websocket\", # Moonraker server.\n",
-    "                       dry = True, # Actions have no consequence.\n",
-    "                       clearance=100.0 # TODO: get this from the deck's definition.\n",
-    ")\n",
+    "backend = PiperBackend(config={\n",
+    "  \"sio_address\": \"http://localhost:3333\", # Pipettin GUI node server.\n",
+    "  \"ws_address\": \"ws://localhost:7125/websocket\", # Moonraker server.\n",
+    "  \"verbose\": False,\n",
+    "  \"dry\": True,\n",
+    "})\n",
     "\n",
     "lh = LiquidHandler(backend=backend, deck=STARLetDeck())"
    ]
