--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1514,11 +1514,10 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "# Piper backend.\n",
     "from pylabrobot.liquid_handling.backends.piper_backend import PiperBackend\n",
-    "tools_url = 'https://gitlab.com/pipettin-bot/pipettin-gui/-/raw/develop/api/src/db/defaults/tools.json'\n",
-    "back = PiperBackend(config={\"dry\": True}, tool_defs=tools_url)"
+    "\n",
+    "back = PiperBackend(config={\"dry\": True})"
    ]
   },
   {
