notebooks: add config parameters to back init

--- a/notebooks/pipettin-bot.ipynb
+++ b/notebooks/pipettin-bot.ipynb
@@ -14,8 +14,16 @@
    "outputs": [],
    "source": [
     "from pylabrobot.liquid_handling.backends.piper_backend import PiperBackend\n",
+    "import logging\n",
     "\n",
-    "back = PiperBackend(config={\"dry\": True, \"ws_address\": \"\", \"sio_address\": \"\"})"
+    "back = PiperBackend(config={\n",
+    "  \"dry\": True,\n",
+    "  # \"ws_address\": \"\",\n",
+    "  # \"ws_address\": \"ws://192.168.10.181:7125/websocket\",\n",
+    "  \"ws_address\": \"ws://10.1.0.4:7125/websocket\",\n",
+    "  \"sio_address\": \"\",\n",
+    "  \"loglevel\": 3,\n",
+    "  \"verbose\": True})"
    ]
   },
   {
@@ -79,6 +87,15 @@
    "outputs": [],
    "source": [
     "# TODO: Chequear que piper esté usando el tip que le pasé."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await lh.stop()"
    ]
   },
   {
