notebooks: homing works (in remote mode too!)

--- a/notebooks/pipettin-bot.ipynb
+++ b/notebooks/pipettin-bot.ipynb
@@ -17,13 +17,14 @@
     "import logging\n",
     "\n",
     "back = PiperBackend(config={\n",
-    "  \"dry\": True,\n",
+    "  \"dry\": False,\n",
     "  # \"ws_address\": \"\",\n",
     "  # \"ws_address\": \"ws://192.168.10.181:7125/websocket\",\n",
     "  \"ws_address\": \"ws://10.1.0.4:7125/websocket\",\n",
-    "  \"sio_address\": \"\",\n",
-    "  \"loglevel\": 3,\n",
-    "  \"verbose\": True})"
+    "  \"sio_address\": \"http://10.1.0.4:3333\",\n",
+    "  \"loglevel\": 4,\n",
+    "  \"verbose\": True\n",
+    "})"
    ]
   },
   {
@@ -49,6 +50,24 @@
     "lh = LiquidHandler(backend=back, deck=deck)\n",
     "\n",
     "await lh.setup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await back._home_machine()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO\n",
+    "\n",
+    "- Fix: have the backend use \"controller.run_actions_protocol\" instead of running gcode directly."
    ]
   },
   {
