piper_backend: add init_dbtools, and call it on init. This allows a deck to be setup afterwords from the backedns data

--- a/notebooks/pipettin-bot.ipynb
+++ b/notebooks/pipettin-bot.ipynb
@@ -17,26 +17,38 @@
     "import logging\n",
     "\n",
     "back = PiperBackend(config={\n",
-    "  \"dry\": False,\n",
+    "  # \"dry\": False,\n",
     "  # \"ws_address\": \"\",\n",
     "  # \"ws_address\": \"ws://192.168.10.181:7125/websocket\",\n",
     "  \"ws_address\": \"ws://10.1.0.4:7125/websocket\",\n",
     "  \"sio_address\": \"http://10.1.0.4:3333\",\n",
-    "  \"loglevel\": 4,\n",
-    "  \"verbose\": True\n",
+    "  # \"loglevel\": 3,\n",
+    "  # \"verbose\": True\n",
+    "  \"datatools\": \"mongo\",\n",
+    "  \"database\": {\n",
+    "    \"mongo_url\": 'mongodb://10.1.0.4:27017/',\n",
+    "    \"database_name\": 'pipettin-2024-09-26'\n",
+    "  }\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pylabrobot.resources.pipettin import make_silver\n",
+    "from pylabrobot.resources.pipettin import SilverDeck\n",
     "\n",
     "# Instantiate and empty SilverDeck.\n",
-    "deck = make_silver()"
+    "deck = SilverDeck(\n",
+    "  workspace=back.database_tools.getWorkspaceByName(\"Experiment\"),\n",
+    "  platforms=back.database_tools.platforms,\n",
+    "  containers=back.database_tools.containers,\n",
+    "  tools=back.database_tools.tools,\n",
+    "  subset_platforms=False\n",
+    ")\n",
+    "deck.summary()"
    ]
   },
   {
@@ -65,15 +77,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO\n",
-    "\n",
-    "- Fix: have the backend use \"controller.run_actions_protocol\" instead of running gcode directly."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Send commands"
    ]
   },
@@ -83,9 +86,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tip_rack = deck.get_resource(\"Blue tip rack 1\")\n",
+    "tip_rack = deck.get_resource(\"Blue tip rack\")\n",
     "\n",
-    "pickups = await lh.pick_up_tips(tip_rack[\"A1\"], use_channels=[0])"
+    "pickups = await lh.pick_up_tips(tip_rack[\"A1\"], use_channels=[1])"
    ]
   },
   {
@@ -94,9 +97,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tube_rack = deck[\"Tube Rack [5x16] 1\"]\n",
+    "tube_rack = deck[\"Tube Rack [5x16]\"]\n",
     "\n",
-    "aspirations = await lh.aspirate(tube_rack[\"A1\"], vols=[100], use_channels=[0])"
+    "aspirations = await lh.aspirate(tube_rack[\"A1\"], vols=[100], use_channels=[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dispenses = await lh.dispense(tube_rack[\"A2\"], vols=[100], use_channels=[1])"
    ]
   },
   {
