piper_backend: use index_to_row_first_index from newt to convert spot index to row-first piper style

--- a/notebooks/pipettin-bot.ipynb
+++ b/notebooks/pipettin-bot.ipynb
@@ -17,7 +17,7 @@
     "import logging\n",
     "\n",
     "back = PiperBackend(config={\n",
-    "  # \"dry\": False,\n",
+    "  \"dry\": True,\n",
     "  # \"ws_address\": \"\",\n",
     "  # \"ws_address\": \"ws://192.168.10.181:7125/websocket\",\n",
     "  \"ws_address\": \"ws://10.1.0.4:7125/websocket\",\n",
@@ -42,7 +42,7 @@
     "\n",
     "# Instantiate and empty SilverDeck.\n",
     "deck = SilverDeck(\n",
-    "  workspace=back.database_tools.getWorkspaceByName(\"Experiment\"),\n",
+    "  workspace=back.database_tools.getWorkspaceByName(\"Experiment 2024-09-27\"),\n",
     "  platforms=back.database_tools.platforms,\n",
     "  containers=back.database_tools.containers,\n",
     "  tools=back.database_tools.tools,\n",
@@ -108,7 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dispenses = await lh.dispense(tube_rack[\"A2\"], vols=[100], use_channels=[1])"
+    "well_plate = deck[\"Standard 384-well plate\"]\n",
+    "\n",
+    "for well in well_plate[\"B2:B7\"]:\n",
+    "  dispenses = await lh.dispense([well], vols=[15], use_channels=[1])"
    ]
   },
   {
@@ -127,6 +130,15 @@
    "outputs": [],
    "source": [
     "await lh.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "well_plate[\"B2:B7\"]"
    ]
   },
   {
