--- a/notebooks/pipettin-bot.ipynb
+++ b/notebooks/pipettin-bot.ipynb
@@ -13,20 +13,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pylabrobot.resources import set_tip_tracking, set_volume_tracking\n",
+    "\n",
+    "# We enable tip and volume tracking globally using the `set_volume_tracking` and `set_tip_tracking` methods.\n",
+    "set_volume_tracking(enabled=True)\n",
+    "set_tip_tracking(enabled=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pylabrobot.liquid_handling.backends.piper_backend import PiperBackend\n",
     "import logging\n",
-    "\n",
+    "# 10.1.0.4\n",
+    "# 192.168.11.221\n",
     "back = PiperBackend(config={\n",
     "  \"dry\": True,\n",
     "  # \"ws_address\": \"\",\n",
-    "  # \"ws_address\": \"ws://192.168.10.181:7125/websocket\",\n",
-    "  \"ws_address\": \"ws://10.1.0.4:7125/websocket\",\n",
-    "  \"sio_address\": \"http://10.1.0.4:3333\",\n",
+    "  \"ws_address\": \"ws://192.168.11.221:7125/websocket\",\n",
+    "  \"sio_address\": \"http://192.168.11.221:3333\",\n",
     "  # \"loglevel\": 3,\n",
     "  # \"verbose\": True\n",
     "  \"datatools\": \"mongo\",\n",
     "  \"database\": {\n",
-    "    \"mongo_url\": 'mongodb://10.1.0.4:27017/',\n",
+    "    \"mongo_url\": 'mongodb://192.168.11.221:27017/',\n",
     "    \"database_name\": 'pipettin-2024-09-26'\n",
     "  }\n",
     "})"
@@ -88,7 +101,16 @@
    "source": [
     "tip_rack = deck.get_resource(\"Blue tip rack\")\n",
     "\n",
-    "pickups = await lh.pick_up_tips(tip_rack[\"A1\"], use_channels=[1])"
+    "pickups = await lh.pick_up_tips(tip_rack[\"A3\"], use_channels=[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lh.head"
    ]
   },
   {
